--- a/css.css
+++ b/css.css
@@ -1,54 +1,57 @@
-/* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } 
-canvas{ display: block; vertical-align: bottom; }
+/* ---- reset ---- */
+body {
+    margin:0; 
+    font:normal 75% Arial, Helvetica, sans-serif;
+
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: normal;
+    align-items: normal;
+    align-content: normal;
+}
+canvas {
+    display: block; 
+    vertical-align: bottom; }
  /* ---- particles.js container ---- */ 
 #particles-js{ 
-text-align: center;
-position:absolute; width: 100%; height: 100%; background-color: #232741; background-image: url("ee.png"); background-repeat: no-repeat; background-size: 20%; background-position: 50% 50%; } 
+    text-align: center;
+    position:absolute;
+    width: 100%; 
+    /*height: 100%;*/ 
+    background-color: #232741; 
+    background-image: url("ee.png"); 
+    background-repeat: no-repeat; 
+    background-size: 20%; 
+    background-position: 50% 50%; 
+
+} 
 /* ---- stats.js ---- */
- .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } 
-#stats, 
-.count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; }
- #stats{ border-radius: 3px 3px 0 0; overflow: hidden; }
- .count-particles{ border-radius: 0 0 3px 3px; }
+ .count-particles { 
+     background: #000022; 
+     position: absolute; 
+     top: 48px; 
+     left: 0; 
+     width: 80px; 
+     color: #13E8E9; 
+     font-size: .8em; 
+     text-align: left; 
+     text-indent: 4px; 
+     line-height: 14px; 
+     padding-bottom: 2px; 
+     font-family: Helvetica, Arial, sans-serif; 
+     font-weight: bold; 
+
+ } .js-count-particles { 
+     font-size: 1.1em;
+
+   } 
 
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #eb8034;
-    color: #232741;
-    padding: 10px 20px;
-}
 
-.logo a {
-    color: white;
-    text-decoration: none;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-.nav-links li {
-    margin: 0 15px;
-}
-
-.nav-links a {
-    color: #232741;
-    text-decoration: none;
-    font-size: 18px;
-    transition: color 0.3s ease;
-}
-
-.nav-links a:hover {
-    color: #66c2ff;
-}
 
 .content {
     text-align: center;
