--- a/css.css
+++ b/css.css
@@ -21,7 +21,7 @@ canvas {
     text-align: center;
     position:absolute;
     width: 100%; 
-    /*height: 100%;*/ 
+
     background-color: #232741; 
     background-image: url("ee.png"); 
     background-repeat: no-repeat; 
@@ -67,4 +67,17 @@ color:white;
 .content p {
     color:white;
     
+}
+@media (max-width: 768px) {
+    #particles-js {
+        height: 100%;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        background-color: #232741;
+        background-image: url("ee.png");
+        background-repeat: no-repeat;
+        background-size: 20%;
+        background-position: 50% 50%;
+    }
 }
